fav icon, title, minor copy change, menu background fixes, scroll bar changes on smaller devices

--- a/portfolio/src/style/general.css
+++ b/portfolio/src/style/general.css
@@ -38,11 +38,11 @@
 @keyframes slideDown {
   from {
     opacity: 0.1;
-    transform: translateY(-250px);
+    transform: translateY(-500px);
   }
 }
 
-@media only screen and (max-width: 400px) {
+@media only screen and (max-width: 900px) {
   @keyframes slideDown {
     from {
       opacity: 0.1;
@@ -51,16 +51,19 @@
   }
 }
 
-*::-webkit-scrollbar {
-    /* nicer scroll bars for all */
-    width: 10px;
-    height: 20px;
-    background-color: rgba(255, 255, 255, 0.5);
-}
+@media only screen and (min-width: 900px) {
+  /* only want custom scroll bars on larger devices */
+  *::-webkit-scrollbar {
+      /* nicer scroll bars for all */
+      width: 10px;
+      height: 20px;
+      background-color: rgba(255, 255, 255, 0.5);
+  }
 
-*::-webkit-scrollbar-thumb {
-    /* nicer scroll thumbs for all */
-    background: rgba(0, 0, 0, 0.5);
+  *::-webkit-scrollbar-thumb {
+      /* nicer scroll thumbs for all */
+      background: rgba(0, 0, 0, 0.5);
+  }
 }
 
 p,
